--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         <section class="catalog">
         </section>
     </main>
-    <script type="text/javascript" src="./javascript/photographer.js"></script>
+    <script type="text/javascript" src="./javascript/main.js"></script>
 </body>
 </html>
