--- a/photographer.html
+++ b/photographer.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/1d4b85ca7e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css" />
     <title>Fishe Eye</title>
 </head>
@@ -34,20 +35,16 @@
             <button class="contact">Contactez-moi</button>
         </section>
         <section class="gallery-container">
-            <label for="sort-by">Trier par:</label>
-            <select name="Trier par" id="sort-by">
-                <option value="dog">Popularité</option>
-                <option value="dog">Date</option>
-                <option value="cat">Titre</option>
+            <label for="sort-by">Trier par</label>
+            <select name="Trier par" class="sort-by" id="sort-by">
+                <option value="popularity">Popularité</option>
+                <option value="date">Date</option>
+                <option value="title">Titre</option>
             </select>
             <section class="gallery">
-                <div class="image">
-                    <img src="./images/Nabeel/Travel_Boat_Wanderer.jpg" alt="" class="image-img">
-                    <div class="image__heading">
-                        <p class="image__heading-title">Travel Boat</p>
-                        <p class="image__heading-like-counter">12</p>
-                    </div>
-                </div>
+
+                
+
             </section>
         </section>
     </main>
