--- a/photographer.html
+++ b/photographer.html
@@ -48,6 +48,6 @@
             </section>
         </section>
     </main>
-    <script type="text/javascript" src="./javascript/medias.js"></script>
+    <script src="./javascript/medias.js"></script>
 </body>
 </html>
