"Sort medias by categories"

--- a/photographer.html
+++ b/photographer.html
@@ -37,7 +37,7 @@
         <section class="gallery-container">
             <label for="sort-by">Trier par</label>
             <select name="Trier par" class="sort-by" id="sort-by">
-                <option value="popularity">Popularité</option>
+                <option class="option" value="likes">Popularité</option>
                 <option value="date">Date</option>
                 <option value="title">Titre</option>
             </select>
