--- a/photographer.html
+++ b/photographer.html
@@ -36,7 +36,7 @@
         </section>
         <section class="gallery-container">
             <label for="sort-by">Trier par</label>
-            <select name="Trier par" class="sort-by" id="sort-by">
+            <select class="sort-by" id="sort-by">
                 <option class="option" value="likes">Popularité</option>
                 <option value="date">Date</option>
                 <option value="title">Titre</option>
