--- a/photographer.html
+++ b/photographer.html
@@ -102,7 +102,7 @@
             <p id="photographer-price"></p>
         </figure>
     </main>
-    <script type="module" src="./javascript/medias.js"></script>
+    <script type="module" src="./javascript/photographer.js"></script>
     <script type="module" src="./javascript/contact.js"></script>
     <script type="module" src="./javascript/lightbox.js"></script>
 </body>
