"Cycle tabindex + accessibility"

--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,300;0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css" />
-    <title>Fishe Eye</title>
+    <title>Fishe Eye - Accueil</title>
 </head>
 <body>
 
-    <header class="main_header" aria-label="header">
+    <header class="main_header">
         <div class="banner">
             <img src="./svg/logo.svg" aria-label="logo" alt="logo Fisheye">
         </div>
-        <nav class="header-tags" aria-label="navigation" role="navigation" id="nav-tags">
-            <ul aria-label="filters photographers by theme" role="button" class="tag-list nav-tag-list" aria-labelledby="nav-tags">
+        <nav class="header-tags" id="nav-tags">
+            <ul aria-label="Filtrer les photographes par thème" role="button" class="tag-list nav-tag-list">
               </ul> 
         </nav>
     </header>
 
     <main>
-        <div class="title" id="our-photographers" aria-label="main title">
-            <h1>Nos photographes</h1>
+        <div class="title">
+            <h1 id="our-photographers">Nos photographes</h1>
         </div>
-        <section class="catalog" aria-label="photographer catalog" aria-labelledby="our-photographers">
+        <section class="catalog" aria-label="catalogue photographes">
         </section>
     </main>
     <script type="module" src="./javascript/main.js"></script>
