--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 
     <header class="main_header">
         <div class="banner">
-            <img src="./svg/logo.svg" aria-label="logo" alt="logo Fisheye">
+            <img src="./svg/logo.svg" aria-label="logo" alt="Fisheye page d'accueil">
         </div>
+
+        <a id="link-to-main" class="tab-element" aria-label="Aller directement au contenu" href="#catalog">Passer au contenu</a>
+        
         <nav class="header-tags" id="nav-tags">
             <ul aria-label="Filtrer les photographes par thème" role="button" class="tag-list nav-tag-list">
               </ul> 
@@ -23,10 +26,11 @@
     </header>
 
     <main>
+
         <div class="title">
             <h1 id="our-photographers">Nos photographes</h1>
         </div>
-        <section class="catalog" aria-label="catalogue photographes">
+        <section id="catalog" class="catalog" aria-label="catalogue de photographes">
         </section>
     </main>
     <script type="module" src="./javascript/main.js"></script>
