"contact and lightbox aria"

--- a/photographer.html
+++ b/photographer.html
@@ -15,7 +15,7 @@
 
     <header class="photographer_header">
         <div class="banner">
-            <a id="backhome" class="back-home-link tab-element" alt="Fiesh eye page d'accueil" aria-label="retour à la page d'accueil" href="index.html">
+            <a id="backhome" class="back-home-link tab-element" aria-label="Fish eye page d'accueil" href="index.html">
                 <img src="./svg/logo.svg" aria-labelledby="backhome" role="button">
             </a>
         </div>
@@ -49,8 +49,8 @@
                 <p id="form-title">Contactez-moi </p>
           
                 <div class="form-data-container" id="form-firstname-container">
-                    <label id="firstname" for="first-name">Prénom</label>
-                    <input class="form-data tab-element-modal" type="text" id="form-firstname" aria-labelledby="firstname" name="firstname" pattern="^[a-zA-Z ]*$" required minlength="2" aria-required="true">
+                    <label id="firstname" for="firstname">Prénom</label>
+                    <input class="form-data tab-element-modal" type="text" id="form-firstname" aria-labelledby="firstname" pattern="^[a-zA-Z ]*$" required minlength="2" aria-required="true">
                 </div>
                 
                 <div class="form-data-container" id="form-lastname-container">
