"Lightbow contact accessibility"

--- a/photographer.html
+++ b/photographer.html
@@ -50,7 +50,7 @@
           
                 <div class="form-data-container" id="form-firstname-container">
                     <label id="firstname" for="firstname">Prénom</label>
-                    <input class="form-data tab-element-modal" type="text" id="form-firstname" aria-labelledby="firstname" pattern="^[a-zA-Z ]*$" required minlength="2" aria-required="true">
+                    <input class="form-data tab-element-modal" type="text" id="form-firstname" aria-labelledby="firstname" name="firstname" pattern="^[a-zA-Z ]*$" required minlength="2">
                 </div>
                 
                 <div class="form-data-container" id="form-lastname-container">
