--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="title">
             <h1 id="our-photographers">Nos photographes</h1>
         </div>
-        <section id="catalog" class="catalog" aria-label="catalogue de photographes">
+        <section id="catalog" class="catalog tab-element" aria-label="catalogue de photographes">
         </section>
     </main>
     <script type="module" src="./javascript/main.js"></script>
