--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a id="link-to-main" class="tab-element" aria-label="Aller directement au contenu" href="#catalog">Passer au contenu</a>
         
         <nav class="header-tags" id="nav-tags">
-            <ul aria-label="Filtrer les photographes par thème" role="button" class="tag-list nav-tag-list">
+            <ul aria-label="Filtrer les photographes par thème" class="tag-list nav-tag-list">
               </ul> 
         </nav>
     </header>
